@@ -1,5 +1,14 @@
 2006-01-20  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/jst/Pad.java: (Pad.setCaps):
+	Don't call the listeners with null caps.
+
+	* src/com/fluendo/plugin/AudioSinkSA.java:
+	(AudioSinkSA...RingReader.stop):
+	Some debugging
+
+2006-01-20  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/plugin/AudioSinkSA.java: (AudioSinkSA),
 	(AudioSinkSA...toUlaw), (AudioSinkSA...RingReader.pause),
 	(AudioSinkSA...RingReader.stop):
